[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/office/kitchen.jpg" type="Texture" id=1]
[ext_resource path="res://src/ui/inventory_hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/SwitchCommand.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/textbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/office/kitchen.gd" type="Script" id=6]
[ext_resource path="res://src/ui/Tooltip.tscn" type="PackedScene" id=7]

[node name="kitchen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_hud" parent="." instance=ExtResource( 2 )]

[node name="take_casserole" parent="." instance=ExtResource( 3 )]
margin_left = 250.0
margin_top = 100.0
margin_right = 450.0
margin_bottom = 120.0

[node name="Label" parent="take_casserole" index="1"]
text = "Take Microwave Casserole"

[node name="get_drink" parent="." instance=ExtResource( 3 )]
margin_left = 250.0
margin_top = 210.0
margin_right = 450.0
margin_bottom = 230.0

[node name="Label" parent="get_drink" index="1"]
text = "Get an Energy Drink"

[node name="to_lobby" parent="." instance=ExtResource( 3 )]
margin_left = 7.23722
margin_top = 181.125
margin_right = 207.237
margin_bottom = 201.125

[node name="Label" parent="to_lobby" index="1"]
text = "Go to Lobby"

[node name="textbox" parent="." instance=ExtResource( 5 )]

[node name="Pause" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Tooltip" parent="." instance=ExtResource( 7 )]
margin_left = 250.0
margin_top = 135.0
margin_right = -188.0
margin_bottom = -202.0

[node name="text" parent="Tooltip" index="0"]
margin_bottom = -8.0
text = "The Microwave Casserole is still in there. Stealing it would probably be a bad idea"

[node name="Tooltip2" parent="." instance=ExtResource( 7 )]
margin_left = 149.0
margin_top = 235.0
margin_right = -192.0
margin_bottom = -90.0

[node name="text" parent="Tooltip2" index="0"]
text = "The table smells like disinfectant and bleach. Maybe someone spilled energy drink. I never drink it usually."

[editable path="take_casserole"]
[editable path="get_drink"]
[editable path="to_lobby"]
[editable path="Tooltip"]
[editable path="Tooltip2"]
